# qrdecoder

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  bootstrap.js  justfile  package-lock.json  package.json  postcss.config.js  style.scss  webpack.config.js
.github/workflows/: deploy.yml
src/: app.rs  lib.rs
static/: index.html  loader.js
