[package]
name = "qrdecoder"
version = "0.1.0"
authors = ["Maksym Schipka <maksym@schipka.work>"]
edition = "2021"
description = "QR code decoder"
license = "MIT"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link-Time Optimization
codegen-units = 1        # Better optimization at cost of compile time
panic = "abort"          # Smaller panic handling
strip = true             # Strip symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = false         # Bundled wasm-opt is too old for bulk memory ops; Rust LTO handles optimization

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.82"
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
rqrr = "0.10"
gloo-file = "0.3"
js-sys = "0.3"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'File',
  'FileList',
  'Blob',
  'HtmlInputElement',
  'DataTransfer',
  'DragEvent',
  'DataTransferItemList',
  'DataTransferItem',
  'Document',
  'Window',
]
